OS labs completed

--- a/content.tex
+++ b/content.tex
@@ -956,20 +956,165 @@ Windows удобна в первую очередь для личного пол
 
 \newpage
 \section{Разграничение доступа к объектам файловой системы}
-В таблицы из баз данных можно загружать данные из источника. Для этого существуют специальные команды transact.
+
+В этой лабораторной работе мы посмотрим, как разграничивать файловую систему и разные методы таких разделителей.
+
 \label{LAB3}
 \subsection{Цель работы}
 \begin{itemize}
-    \item Изучить T-SQL команды INSERT, INSERT-SELECT.
-    \item Внести данные из файла в базу данных.
-    \item Добавить запросы данных из таблиц.
-    \item Добавить с таблицы данные о книге Карпова Т. С. Базы данных: модели, разработка, реализация, 2001.
+    \item Изучить существующие файловые разделения.
+    \item Рассмотреть права доступа к файлам.
+    \item Выполнить настройку механизмов защиты.
 \end{itemize}
 \subsection{Ход работы}
 
-\subsection{Вывод}
-В ходе выполнения данной лабораторной работы мы изучили команды INSERT, SELECT. Внесли данные из файла в базу данных. Написали запросы данных из таблиц и выполнили дополнительное задание. 
+Для выполнения каждой задачи существует минимальный набор прав доступа для администратора и пользователя. Давайте рассмотрим эти права в виде таблицы \ref{tab:31}:
 
+\begin{table}[h!]
+    \centering
+    \begin{tabular}{|c|c|c|}
+    \hline
+    Объект доступа&Администратор&Пользователь\\
+    \hline
+    /boot&RX&-\\
+    /etc&RWX&R\\
+    kernel&RWX&RX\\
+    \hline
+    \end{tabular}
+    \caption{Минимальные права для исполнения}
+    \label{tab:31}
+\end{table}
+
+Для загрузки системы (/boot) достаточно прав администратору. Пользователю для загрузки права на это не нужны. Впрочем, как и для других действий, ведь все разрешения пользователь может запросить у администратора внутри самой системы.
+
+Для входа в систему пользователь должен иметь только права на чтение. Для запуска программ нужны права на чтение и исполнение.
+
+Теперь попробуем посмотреть на практике, что получается при выдаче различных прав доступа. Создадим новую папку и файл (рис. \ref{fig:filecreat}).
+
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width=0.5\linewidth]{Pic/lab3/photo_2025-05-23_20-58-47.jpg}
+    \caption{Создание файлов.}
+    \label{fig:filecreat}
+\end{figure}
+
+Выдадим на файл следующие права доступа: владельцем файла является Администратор, для Пользователя установлено разрешение «Запись» («Write»), для Администратора установлено разрешение «Чтение» («Read»), а для группы «Все» («Everyone») (оба пользователя входят в эту группу) - разрешение «Изменение» (рис. \ref{fig:fileaccess}).
+
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width=0.5\linewidth]{Pic/lab3/photo_2025-05-23_20-58-49.jpg}
+    \caption{Права доступа на файл.}
+    \label{fig:fileaccess}
+\end{figure}
+
+Итого пользователи будут иметь следующие права: 
+
+\begin{table}[h!]
+    \centering
+    \begin{tabular}{|c|c|c|}
+    \hline
+    Администратор&Пользователь&Все\\
+    \hline
+    Full&WC&C\\
+    \hline
+    \end{tabular}
+    \caption{Итоговые права доступа на файл}
+    \label{tab:31}
+\end{table}
+
+На папку выдадим следующие права: владельцем папки является Пользователь, для пользователя установлено разрешение «Чтение» («Read»), для Администратора установлено разрешение «Полный доступ» («Full control»), а для группы «Все» («Everyone») (оба пользователя входят в группу) – не установлены разрешения (установлено «No Access») (\ref{fig:diraccess}). 
+
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width=0.5\linewidth]{Pic/lab3/photo_2025-05-23_20-58-53.jpg}
+    \caption{Права доступа на файл.}
+    \label{fig:diraccess}
+\end{figure}
+
+\begin{table}[h!]
+    \centering
+    \begin{tabular}{|c|c|c|}
+    \hline
+    Администратор&Пользователь&Все\\
+    \hline
+    NO&NO&NO\\
+    \hline
+    \end{tabular}
+    \caption{Итоговые права доступа на папку}
+    \label{tab:31}
+\end{table}
+
+Выполним настройку систем защиты ОС Windows. Первое, что мы сделаем, это ограничим доступ в Program Files. Для этого надо правой кнопкой кликнуть по папке, перейти во вкладку Безопасность и убрать права у пользователей, оставив администраторам.
+
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width=0.5\linewidth]{Pic/lab3/photo_2025-05-23_21-53-01.jpg}
+    \caption{Права доступа к папке Program Files.}
+    \label{fig:ProgramFiles}
+\end{figure}
+
+Запретим запись на флеш-диски. Для этого будем использовать утилиту gpedit.msc. "Конфигурация компьютера" → "Административные шаблоны" → "Система" → "Доступ к съёмным запоминающим устройствам". Запрещаем запись на съёмные диски (рис. \ref{fig:disablef}). Похожими действиями наложим иные запреты.
+
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width=0.5\linewidth]{Pic/lab3/photo_2025-05-23_21-53-04.jpg}
+    \caption{Запрет записи на диски.}
+    \label{fig:disablef}
+\end{figure}
+
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width=0.5\linewidth]{Pic/lab3/photo_2025-05-23_21-53-06.jpg}
+    \caption{Запрет исполнения с дисков.}
+    \label{disablexef}
+\end{figure}
+
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width=0.5\linewidth]{Pic/lab3/photo_2025-05-23_21-54-05.jpg}
+    \caption{Запрет запуска программ из сети.}
+    \label{disablexef}
+\end{figure}
+
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width=0.4\linewidth]{Pic/lab3/photo_2025-05-23_21-54-07.jpg}
+    \includegraphics[width=0.4\linewidth]{Pic/lab3/photo_2025-05-23_21-54-09.jpg}
+    \caption{Разделение файлов между несколькими пользователями.}
+    \label{fig:enter-label}
+\end{figure}
+
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width=0.5\linewidth]{Pic/lab3/photo_2025-05-23_21-54-11.jpg}
+    \caption{Запрет на исполнение с диска D.}
+    \label{fig:exed}
+\end{figure}
+\newpage
+Давайте сравним файловые системы FAT32 и NTFS. 
+\begin{table}[h!]
+    \centering
+    \begin{tabular}{|c|c|c|}
+    \hline
+    Характеристика&FAT&NTFS\\
+    \hline
+    ОС&Windows, Linux&Windows\\
+    \hline
+    Макс. размер файла&4 GB&16 TB\\
+    \hline
+    Макс. размер раздела&8 TB&256 TB\\
+    \hline
+    \end{tabular}
+    \caption{Сравнение NTFS и FAT32}
+    \label{tab:31}
+\end{table}
+\newpage
+Подытожим работу c Windows. Мы выяснили множество способов задания прав пользователей. Первый и самый очевидный - через проводника. Редактируем свойства пользователя. Примеры данного способа богато представлены в отчёте выше.
+
+Другой способ - использовать команды icacls. Такие способы уже опробованы здесь (рис. \ref{fig:icaclsAccess}). По итогу можем сказать, что у пользователя есть определённые преимущества при использовании Windows. Система NTFS превосходит FAT32, Windows предлагает обширный пакет приложений. Существует возможность настройки доступов, файловой системы и общего доступа к файлам. Хоть система не слишком удобна конкретно для разработки, она прекрасно подходит для частного использования. 
+\subsection{Вывод}
+В данной лабораторной работе мы изучили существующие файловые разделения. Рассмотрели права доступа к файлам и выполнили настройку механизмов защиты. 
+\newpage
 \section{Виртуальная машина Linux}
 В этой лабораторной работе мы развернём виртуальную машину с системой Linux, используя программу Oracle VirtualBox. 
 
